Stop using deprecated Locale constructors in o.e.help.webapp